--- a/heartdisease.ipynb
+++ b/heartdisease.ipynb
@@ -13,8 +13,7 @@
     "<br><br>\n",
     "Murilo Garcia  \n",
     "**E-mail:** murilogmamaral@gmail.com  \n",
-    "**Linkedin:** https://www.linkedin.com/in/murilogmamaral/\n",
-    "___"
+    "**Linkedin:** https://www.linkedin.com/in/murilogmamaral/"
    ]
   },
   {
@@ -131,7 +130,7 @@
    "outputs": [],
    "source": [
     "# Carregando a base\n",
-    "df = pd.read_csv('heart.csv')"
+    "df = pd.read_csv('datasets/heart.csv')"
    ]
   },
   {
@@ -1419,7 +1418,7 @@
     }
    ],
    "source": [
-    "# Observando os melhores resultados dentro de uma margem com boa generalização\n",
+    "# Observando os melhores resultados\n",
     "cv_results = pd.DataFrame(gcv.cv_results_)\n",
     "cond = (cv_results.mean_train_score < 0.95) & (cv_results.mean_test_score > 0.89)\n",
     "cv_results[cond][['mean_train_score','mean_test_score','rank_test_score']]\\\n",
@@ -1448,7 +1447,7 @@
     }
    ],
    "source": [
-    "# Escolhendo parâmetros\n",
+    "# Escolhendo os parâmetros\n",
     "index = 8\n",
     "cv_results.iloc[index,4:8]"
    ]
