--- a/heartdisease.ipynb
+++ b/heartdisease.ipynb
@@ -953,8 +953,8 @@
    ],
    "source": [
     "# Selecionando as features\n",
-    "cat_columns = ['sex','chestpaintype','fastingbs','restingecg','exerciseangina','st_slope'] # colunas numéricas\n",
-    "num_columns = ['oldpeak','age', 'restingbp', 'cholesterol','maxhr'] # colunas categóricas\n",
+    "cat_columns = ['sex','chestpaintype','fastingbs','restingecg','exerciseangina','st_slope'] # colunas categóricas\n",
+    "num_columns = ['oldpeak','age', 'restingbp', 'cholesterol','maxhr'] # colunas numéricas\n",
     "target = 'heartdisease'\n",
     "df_refined = df[cat_columns + num_columns + [target]]\n",
     "df_refined.head()"
@@ -1012,7 +1012,7 @@
    "id": "58cdbc5d",
    "metadata": {},
    "source": [
-    "Obs.: Podemos perceber que homens (_sex_ = M) com açúcar no sangue em jejum (_fastingbs_ = 1) e dor no peito causada por exercício (_exerciseangina_ = Y) têm uma chance bastante grande de possuir cardiopatia. Mesmo quando não há açucar no sangue em jejum (_fastingbs_ = 0), se há dor no peito durante exercícios (_exerciseangina_ = Y), a chance do homem possuir cardiopatia é grande. E quando não há dor no peito durante exercícios (_exerciseangina_ = F), se há açúcar no sangue em jejum (_fastingbs_ = 1), há também uma tendência (ainda que mais leve) do homem ter cardiopatia."
+    "Obs.: Podemos perceber que homens (_sex_ = M) com açúcar no sangue em jejum (_fastingbs_ = 1) e dor no peito causada por exercício (_exerciseangina_ = Y) têm uma chance bastante grande de possuir cardiopatia. Mesmo quando não há açucar no sangue em jejum (_fastingbs_ = 0), se há dor no peito durante exercícios (_exerciseangina_ = Y), a chance do homem possuir cardiopatia é grande. E quando não há dor no peito durante exercícios (_exerciseangina_ = N), se há açúcar no sangue em jejum (_fastingbs_ = 1), há também uma tendência (ainda que mais leve) do homem ter cardiopatia."
    ]
   },
   {
@@ -4760,7 +4760,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
